--- a/Meme History/Base.lproj/Main.storyboard
+++ b/Meme History/Base.lproj/Main.storyboard
@@ -6,41 +6,66 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Movies Table View Controller-->
+        <!--Memes Table View Controller-->
         <scene sceneID="ZjQ-Yc-f7d">
             <objects>
-                <tableViewController id="csa-wA-aqY" customClass="MoviesTableViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="csa-wA-aqY" customClass="MemesTableViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="n0u-cu-O85">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="ZDL-Dd-Kk7" detailTextLabel="Vwf-BQ-Jqc" style="IBUITableViewCellStyleSubtitle" id="OKk-0l-qbE">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="memeCellIdentifier" rowHeight="150" id="OKk-0l-qbE" customClass="MemeTableViewCell" customModule="Movies" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OKk-0l-qbE" id="dVQ-n4-UuV">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZDL-Dd-Kk7">
-                                            <rect key="frame" x="16" y="5" width="33.5" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gAv-Mb-8cg">
+                                            <rect key="frame" x="145" y="21" width="64" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Vwf-BQ-Jqc">
-                                            <rect key="frame" x="16" y="25.5" width="44" height="14.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="btZ-Kp-MxK">
+                                            <rect key="frame" x="145" y="84" width="47.5" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RtP-zT-E0J">
+                                            <rect key="frame" x="10" y="-1" width="115" height="150"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="RtP-zT-E0J" secondAttribute="height" multiplier="23:30" id="wiq-ra-jQg"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="btZ-Kp-MxK" secondAttribute="bottom" constant="35.5" id="7os-wi-7VO"/>
+                                        <constraint firstItem="btZ-Kp-MxK" firstAttribute="top" secondItem="gAv-Mb-8cg" secondAttribute="bottom" constant="33" id="BvZ-MW-VMa"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="btZ-Kp-MxK" secondAttribute="trailing" constant="10" id="Ed1-Em-KT4"/>
+                                        <constraint firstItem="RtP-zT-E0J" firstAttribute="leading" secondItem="dVQ-n4-UuV" secondAttribute="leading" constant="10" id="KJn-lp-GxZ"/>
+                                        <constraint firstItem="gAv-Mb-8cg" firstAttribute="top" secondItem="dVQ-n4-UuV" secondAttribute="top" constant="21" id="KQL-Wp-LU9"/>
+                                        <constraint firstItem="btZ-Kp-MxK" firstAttribute="leading" secondItem="RtP-zT-E0J" secondAttribute="trailing" constant="20" id="SKK-P3-Gbr"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gAv-Mb-8cg" secondAttribute="trailing" constant="10" id="pYU-bH-HQS"/>
+                                        <constraint firstItem="gAv-Mb-8cg" firstAttribute="leading" secondItem="RtP-zT-E0J" secondAttribute="trailing" constant="20" id="q1D-L6-bg9"/>
+                                        <constraint firstItem="RtP-zT-E0J" firstAttribute="top" secondItem="dVQ-n4-UuV" secondAttribute="top" constant="-1" id="vyE-g4-ova"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <constraints>
+                                    <constraint firstItem="RtP-zT-E0J" firstAttribute="height" secondItem="OKk-0l-qbE" secondAttribute="height" id="NhD-Eg-LiU"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="memeImg" destination="RtP-zT-E0J" id="DI2-W1-sI2"/>
+                                    <outlet property="nameLabel" destination="gAv-Mb-8cg" id="IAB-FP-pDC"/>
+                                    <outlet property="yearLabel" destination="btZ-Kp-MxK" id="Tpw-Hl-dRu"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -51,7 +76,22 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4rF-14-pWD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="280" y="208"/>
+            <point key="canvasLocation" x="279.19999999999999" y="207.34632683658174"/>
+        </scene>
+        <!--Meme Description Controller-->
+        <scene sceneID="67i-R0-fCg">
+            <objects>
+                <viewController id="OVn-bU-lM3" customClass="MemeDescriptionController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="In6-sb-197">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="8e4-xu-0Lq"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dSk-Lh-7CV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1100" y="197"/>
         </scene>
     </scenes>
 </document>
